Refactored maven build so that scala 2.10 and 2.11 can be built optionally.  Changed the artifact name to be standard scala --e.g. the major version number is included in the artifact name